--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://metatags.io/" />
+        <meta property="og:url" content="https://A113070047.github.io/" />
         <meta property="og:title" content="1321231321212122321" />
         <meta property="og:description" content="4654654654564654465464654546545464" />
-        <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+        <meta property="og:image" content="https://A113070047.github.io/assets/img/Mount_Fuji_from_Lake_Motosu_2021-12-04.jpg" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://metatags.io/" />
+        <meta property="twitter:url" content="https://A113070047.github.io/" />
         <meta property="twitter:title" content="1321231321212122321" />
         <meta property="twitter:description" content="4654654654564654465464654546545464" />
-        <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+        <meta property="twitter:image" content="https://A113070047.github.io/assets/img/Mount_Fuji_from_Lake_Motosu_2021-12-04.jpg" />
 
         <!-- Meta Tags Generated with https://metatags.io -->
 
