--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
             </div>
         </nav>
         <!-- Page Content-->
+
         <div class="container-fluid p-0">
             <!-- About-->
             <section class="resume-section" id="about">
+                
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Clarence
@@ -74,6 +76,12 @@
                     </div>
                 </div>
             </section>
+
+        <div class:"row">
+            <div class:"col">1</div>
+            <div class:"col">2</div>
+            <div class:"col">3</div>
+        <div/>
             <hr class="m-0" />
             <!-- Experience-->
             <section class="resume-section" id="experience">
