--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class:"col">1</div>
             <div class:"col">2</div>
             <div class:"col">3</div>
-        </div>div>
+        </div>
             <hr class="m-0" />
             <!-- Experience-->
             <section class="resume-section" id="experience">
