--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                 </div>
             </section>
 
-        <div class:"row">
-            <div class:"col">1</div>
-            <div class:"col">2</div>
-            <div class:"col">3</div>
+        <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">3</div>
         </div>
             <hr class="m-0" />
             <!-- Experience-->
