--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">關於</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">經驗</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">學歷</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">技能</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">興趣</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">獎項</a></li>
                 </ul>
             </div>
         </nav>
@@ -65,15 +65,15 @@
                         <span class="text-primary">A113070047</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · 0906137077 ·
+                        世新大學木柵路一段17巷1號 · 0906137077 ·
                         <a href="mailto:name@email.com">a113070047@mail.shu.edu.tw</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">...</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.instagram.com/aoi_____0320?ugsh=MTA1eGQ1aHRwNjB5Ng==" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                        <a class="social-icon" href="https://github.com/A113070047/A113070047.github.io" target="_blank"><i class="fa-brands fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fa-brands fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/aoi_____0320?ugsh=MTA1eGQ1aHRwNjB5Ng==" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a class="social-icon" href="https://github.com/A113070047/A113070047.github.io" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://x.com/Muramasa_0320?t=4-K4T3DVRyR-9AHiMyDEjg&s=09" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/share/1Fi8kBaoLz/" target="_blank"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
@@ -82,7 +82,7 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">Experience</h2>
+                    <h2 class="mb-5" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">經驗</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Web Developer</h3>
@@ -121,10 +121,10 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h2 class="mb-5">學歷</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
+                            <h3 class="mb-0">世新大學</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Computer Science - Web Development Track</div>
                             <p>GPA: 3.23</p>
@@ -145,10 +145,10 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
+                    <h2 class="mb-5">技能</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fa-brands fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
                         <li class="list-inline-item"><i class=""></i></li>
@@ -186,7 +186,7 @@
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
+                    <h2 class="mb-5">興趣</h2>
                     <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
@@ -195,7 +195,7 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">獎項與證書</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
@@ -239,6 +239,26 @@
                 </div>
             </section>
         </div>
+
+        <div id="carouselExampleIndicators" class="carousel slide carousel-item-size" data-bs-ride="carousel" >
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/img/profile.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/Mount_Fuji_from_Lake_Motosu_2021-12-04.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/Mount_Fuji_from_Lake_Motosu_2021-12-04.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+
+
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
