--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">關於</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">經驗</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">經歷</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">學歷</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">技能</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">興趣</a></li>
@@ -82,8 +82,8 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">經驗</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
+                    <h2 class="mb-5" data-aos="" data-aos-anchor-placement="">經歷</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5" data-aos="" data-aos-anchor-placement="">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Web Developer</h3>
                             <div class="subheading mb-3">Intelitec Solutions</div>
@@ -91,7 +91,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5" data-aos="" data-aos-anchor-placement="">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Developer</h3>
                             <div class="subheading mb-3">Intelitec Solutions</div>
@@ -125,19 +125,19 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">世新大學</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <div class="subheading mb-3">資訊傳播學系</div>
+                            <div>...</div>
+                            <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2024 - </span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">國立嘉義高中</h3>
+                            <div class="subheading mb-3">普通班畢業</div>
+                            <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - June 2024</span></div>
                     </div>
                 </div>
             </section>
@@ -146,7 +146,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">技能</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <div class="subheading mb-3">程式語言與工具</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
