--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body ">
-              <div class="container">
+              <div class="container playlist-pm">
                 <div class="row">
                       <div class="col-1 cover-pm">
                           <!--放音樂的地方-->
