--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>123123</title>
+        <title>A113070047 楊鈞程</title>
         <link rel="icon" type="image/x-icon" href="assets/img/cash-svgrepo-com.svg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -38,7 +38,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">楊鈞程</span>
+                <span class="d-block d-lg-none"></span>
                 <span data-aos="zoom-in" class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -69,7 +69,7 @@
                         世新大學木柵路一段17巷1號 · 0906137077 ·
                         <a href="mailto:name@email.com">a113070047@mail.shu.edu.tw</a>
                     </div>
-                    <p class="lead mb-5">...</p>
+                    <p class="lead mb-5">這是一個上課在教html和css，卻在這裡寫了一堆javascript的大學生</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.instagram.com/aoi_____0320?ugsh=MTA1eGQ1aHRwNjB5Ng==" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a class="social-icon" href="https://github.com/A113070047/A113070047.github.io" target="_blank"><i class="fab fa-github"></i></a>
@@ -374,15 +374,15 @@
 }
 
         function togglePlayPause() {
-    if (isPlaying) {
+        if (isPlaying) {
         audio.pause();
         playPauseBtn.innerHTML = '<i class="fas fa-play">';
         audio.volume = 0.1;
-    } else {
+        } else {
         audio.play();
         playPauseBtn.innerHTML = '<i class="fas fa-pause"></i> ';
         audio.volume = 0.1;
-    }
+        }
     isPlaying = !isPlaying;
 }
 
