--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                     <h2 class="mb-5" data-aos="" data-aos-anchor-placement="">經歷</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5" data-aos="" data-aos-anchor-placement="">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">2025 CAPCOM CUP 11 - Street fighter 6</h3>
+                            <div class="subheading mb-3">沒有參賽在家看冠軍賽</div>
+                            <p>在家看kakeru奪冠，並看他贏得1,000,000美金的獎金</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2025.3.5-2025.3.9</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5" data-aos="" data-aos-anchor-placement="">
                         <div class="flex-grow-1">
@@ -127,7 +127,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">世新大學</h3>
                             <div class="subheading mb-3">資訊傳播學系</div>
-                            <div>...</div>
+                            <div>一個逐漸沒有夢想的大學生</div>
                             <p></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2024 - </span></div>
@@ -136,7 +136,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">國立嘉義高中</h3>
                             <div class="subheading mb-3">普通班畢業</div>
-                            <p></p>
+                            <p>混了三年</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2021 - June 2024</span></div>
                     </div>
@@ -190,8 +190,8 @@
                     <h2 class="mb-5">興趣</h2>
                     <p>
             <!-- 興趣裡放音樂的東東的button -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                    音樂播放清單
+            <button type="button" class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                    <div class="btn-text">音樂播放清單</div>
             </button>
 
             <!-- Modal -->
