--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     <!--動漫輪播-->
                     <p>推薦動漫 <i class="fa-solid fa-down-long"></i></p>
                            <div class="d-flex justify-content-center ">
-                                <div id="carouselExampleIndicators" class="carousel slide carousel-item-size" data-bs-ride="carousel" >
+                                <div id="carouselExampleIndicators" class="carousel slide carousel-item-size anime-size" data-bs-ride="carousel" >
                                 <div class="carousel-indicators">
                                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
