--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link href="css/mystyle.css" rel="stylesheet" />
+        <link href="css/mystyle.css" rel="stylesheet"/>
         
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://A113070047.github.io/" />
-        <meta property="og:title" content="1321231321212122321" />
-        <meta property="og:description" content="4654654654564654465464654546545464" />
+        <meta property="og:title" content="啊哈" />
+        <meta property="og:description" content="啊哈" />
         <meta property="og:image" content="https://A113070047.github.io/assets/img/Mount_Fuji_from_Lake_Motosu_2021-12-04.jpg" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://A113070047.github.io/" />
-        <meta property="twitter:title" content="1321231321212122321" />
-        <meta property="twitter:description" content="4654654654564654465464654546545464" />
+        <meta property="twitter:title" content="啊哈" />
+        <meta property="twitter:description" content="啊哈" />
         <meta property="twitter:image" content="https://A113070047.github.io/assets/img/Mount_Fuji_from_Lake_Motosu_2021-12-04.jpg" />
 
         <!-- Meta Tags Generated with https://metatags.io -->
@@ -417,7 +417,7 @@
             thirdcircle.style.display = 'none';
             });
             //loading//
-            
+
             // Add this inside the <script> tag at the bottom of the HTML
         const playPauseBtn = document.getElementById('playPauseBtn');
         const modalfooter = document.querySelector('.btn-c');
