--- a/index.html
+++ b/index.html
@@ -335,21 +335,17 @@
                 <section class="resume-section" id="awards">
                     <div class="resume-section-content">
                         <h2 class="mb-5">獎項與證書</h2>
-                        <ul class="fa-ul mb-0">
-                            <li>
-                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                                日本語能力試驗 JLPT N1合格
-                            </li>
-                            <li>
-                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                                日本語能力試驗 JLPT N2合格
-                            </li>
-                            <li>
-                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                                日本語能力試驗 JLPT N3合格
-                            </li>
-                            
-                        </ul>
+
+                        <div class="alert alert-primary" role="alert">
+                        日本語能力試驗 JLPT N1合格
+                        </div>
+                        <div class="alert alert-secondary" role="alert">
+                        日本語能力試驗 JLPT N2合格
+                        </div>
+                        <div class="alert alert-success" role="alert">
+                        日本語能力試驗 JLPT N3合格
+                        </div>
+                        
                     </div>
                 </section>
             </div>
